# lalaze-photo

./: .gitignore  README.md
back-end/: .env  Cargo.toml
back-end/src/: .env  db.rs  main.rs
back-end/src/api/: auth.rs  error_code.rs  files.rs  middleware.rs  mod.rs  photo.rs  response.rs  tag.rs  user.rs  user_data.rs
back-end/src/models/: mod.rs  photo.rs  tag.rs  user.rs
back-end/src/repository/: mod.rs  mongodb_repos.rs  tag.rs  user_repos.rs
front/: Cargo.toml  index.html  index.scss
front/src/: api.rs  login_card.rs  main.rs  utils.rs
front/src/api/: auth.rs
front/src/components/: login_card.rs  message.rs  mod.rs
