[package]
name = "lalaze-photo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.1"
tokio = { version = "1.27.0" }
futures-util = "0.3"
actix-web = "4.3.1"
actix-multipart = "0.6.0"
dotenv = "0.15.0"
serde = "1.0.160"
regex = "1.8.1"
