[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2.86"
serde = "1.0.163"
serde_json = "1.0.96"
web-sys = "0.3.63"
gloo = "0.8"
json = "0.12.4"
slab = "0.4.8"
wasm-bindgen-futures = "0.4.36"
gloo-timers = { version = "0.2.6",  features = ["futures"] }